[ICIJ/datashare#438] fix class loading when jar is not loaded